# GameEngineDevelopingCourse

Engine/Editor/: CMakeLists.txt
Engine/Editor/Editor/: CMakeLists.txt
Engine/Editor/Editor/private/: Editor.cpp  main.cpp
Engine/Editor/Editor/public/: Editor.h
Engine/Editor/LevelEditor/: CMakeLists.txt
Engine/Editor/LevelEditor/private/: LevelEditor.cpp
Engine/Editor/LevelEditor/public/: LevelEditor.h
